--- a/ProyectoMVC/src/edu/ucundi/vista/Formulario.form
+++ b/ProyectoMVC/src/edu/ucundi/vista/Formulario.form
@@ -260,7 +260,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/vista/formulario.jpg"/>
+          <Image iconType="3" name="/imagenes/formulario.jpg"/>
         </Property>
       </Properties>
       <Constraints>
@@ -294,7 +294,7 @@
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/vista/Fondo.jpg"/>
+          <Image iconType="3" name="/imagenes/Fondo.jpg"/>
         </Property>
       </Properties>
       <Constraints>
